tests/transpiler/x/scala/list_set_ops.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/list_set_ops.scala:5: warning: non-variable type argument Int in type pattern List[Int] (the underlying of List[Int]) is unchecked since it is eliminated by erasure
        case xs: List[Int] => println(xs.mkString(" ") )
                 ^
/workspace/mochi/tests/transpiler/x/scala/list_set_ops.scala:11: error: value except is not a member of List[Int]
        mochiPrint((List(1, 2, 3) except List(2)))
                                  ^
one warning found
one error found
