tests/transpiler/x/scala/list_set_ops.scala
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 17:48:05 GMT+7
object Main {
    def mochiPrint(v: Any): Unit = v match {
        case b: Boolean => if (b) println(1) else println(0)
        case xs: List[Int] => println(xs.mkString(" ") )
        case x => println(x)
    }

    def main(args: Array[String]): Unit = {
        mochiPrint((List(1, 2) union List(2, 3)))
        mochiPrint((List(1, 2, 3) except List(2)))
        mochiPrint((List(1, 2, 3) intersect List(2, 4)))
        mochiPrint((List(1, 2) union List(2, 3)).length)
    }
}
